added returnt to page link on recipes/chicken-adobo.html /egg-caldereta.html /paksiw-pata.html

--- a/recipes/chicken-adobo.html
+++ b/recipes/chicken-adobo.html
@@ -23,3 +23,5 @@
     <li>Heat oil in a separate pan, strain chicken and sauté until golden brown.</li>
     <li>Pour cooking liquid and simmer for 5 minutes. Transfer into a serving plate and serve.</li>
 </ol>
+
+<a href="../index.html">Return to main page</a>
