--- a/recipes/egg-caldereta.html
+++ b/recipes/egg-caldereta.html
@@ -25,3 +25,5 @@
     <li>dd tomato sauce to thicken the sauce. Season with MAGGI® MAGIC SARAP®</li>
     <li>Add eggs marinated in pineapple juice. Add salt and pepper to taste.</li>
 </ol>
+
+<a href="../index.html">Return to main page</a>
