--- a/recipes/paksiw-pata.html
+++ b/recipes/paksiw-pata.html
@@ -26,3 +26,5 @@
     <li>Sauté pork and garlic in remaining oil. Add vinegar, soy sauce, sugar, bay leaf, peppercorn and banana blossom . Pour water to barely cover pork. Simmer until tender.</li>
     <li>Add saba and simmer for another 5 minutes. Season withMAGGI® MAGIC SARAP®. Transfer into a serving plate and serve.</li>
 </ol>
+
+<a href="../index.html">Return to main page</a>
